--- a/extrataskFixed/extrataskFixed2.1/index.html
+++ b/extrataskFixed/extrataskFixed2.1/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <main class="main">
-    <button>Нажми на меня</button>
+    <button class="main__btn">Нажми на меня</button>
     <section class="modal-screen">
         <div>
-            <div class="modal-screen__close-btn">
-                <button></button>
+            <div class="modal-screen__close-btn-container">
+                <button class="modal-screen__close-btn"></button>
             </div>
             <h1 class="modal-screen__title">Модальное окно</h1>
             <div class="modal-screen__line"></div>
