feat private message

--- a/UI/index.html
+++ b/UI/index.html
@@ -24,7 +24,7 @@
             <div id="profile" class="profile">
             </div>
         </header>
-        <section id = "users-block" class="users">
+        <section id="users-block" class="users">
             <div class="user-search">
                 <img src="assets/images/ant-design_search-outlined.png" alt="search-icon"/>
                 <input id="user-search" placeholder="Поиск"/>
@@ -36,7 +36,7 @@
             <article id="users-list" class="users-list">
             </article>
         </section>
-        <section id ="messages" class="messages">
+        <section id="messages" class="messages">
             <div class="messages-header">
                 <div class="messages-header__chat">
                     <div class="messages-header__chat-name  orange">DC</div>
@@ -72,15 +72,15 @@
                         <button id="filter__btn-cancel" class="filter__button button-disabled" disabled>Отмена</button>
                     </div>
                 </article>
-                <button  class="chat-messages-button orange chat-button_active"><img id="add-msg-btn"
-                        src="assets/images/add%20message.png"
-                        alt="add-message-button"></button>
+                <button class="chat-messages-button orange chat-button_active"><img id="add-msg-btn"
+                                                                                    src="assets/images/add%20message.png"
+                                                                                    alt="add-message-button"></button>
             </div>
             <div id="messages-list" class="messages-list">
 
             </div>
         </section>
-        <section id ="chat-input" class="chat-input ">
+        <section id="chat-input" class="chat-input ">
             <div>
                 <input id="message-input" class="message-input_disabled" type="text"
                        placeholder="Только зарегистрированный пользователь может писать сообщения..." disabled/>
@@ -95,8 +95,17 @@
                 <div class="form__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
             </div>
             <input class="form-input" name="name" type="text" placeholder="login">
-            <input  class="form-input" type="password" placeholder="password">
+            <input class="form-input" type="password" placeholder="password">
             <button id="form-btn" class="form__button">Войти</button>
+        </form>
+        <form class="form">
+            <div class="form-header">
+                <div class="form__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
+            </div>
+            <input class="form-input" name="name" type="text" placeholder="login">
+            <input class="form-input" type="password" placeholder="password">
+            <input class="form-input" type="password" placeholder="password">
+            <button id="sign-in-btn" class="form__button">Регистрация</button>
         </form>
         <footer class="footer">
             <div>
