fix:commit method

--- a/UI/index.html
+++ b/UI/index.html
@@ -38,7 +38,7 @@
         </section>
         <section id="messages" class="messages">
             <div class="messages-header">
-                <div class="messages-header__chat">
+                <div class="messages-header__chat" id="chat-header">
                     <div class="messages-header__chat-name  orange">DC</div>
                     <span>DM Courses</span>
                 </div>
@@ -124,9 +124,9 @@
         </footer>
     </main>
 </template>
-
 </body>
 <script src="classes/UserLogo.js"></script>
+<script src="classes/ChatHeaderView.js"></script>
 <script src="classes/Message.js"></script>
 <script src="classes/MessageList.js"></script>
 <script src="classes/UserList.js"></script>
