--- a/UI/index.html
+++ b/UI/index.html
@@ -10,130 +10,129 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-<template id="mainPage-template">
-    <main class="main" id="main">
-        <header class="header" id="header">
-            <div>
-                <div class="header__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
-                <h1 class="header__title" id="header-logo">Заводной апельсин</h1>
+<main class="main" id="main">
+    <header class="header" id="header">
+        <div>
+            <div class="header__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
+            <h1 class="header__title" id="header-logo">Заводной апельсин</h1>
+        </div>
+        <div class="mobile">
+            <img class="mobile__search-toggle" src="assets/images/filter.png" alt="filter"/>
+            <div class="mobile__burger-menu "></div>
+        </div>
+        <div id="profile" class="profile">
+        </div>
+    </header>
+    <section id="users-block" class="users">
+        <div class="user-search">
+            <img src="assets/images/ant-design_search-outlined.png" alt="search-icon"/>
+            <input id="user-search" placeholder="Поиск"/>
+        </div>
+        <div class="users-types">
+            <span class="users-types__all users-active">Все</span>
+            <span class="users-types__onlain">Онлайн</span>
+        </div>
+        <article id="users-list" class="users-list">
+        </article>
+    </section>
+    <section id="messages" class="messages">
+        <div class="messages-header">
+            <div class="messages-header__chat" id="chat-header">
+                <div class="messages-header__chat-name  orange">DC</div>
+                <span>DM Courses</span>
             </div>
-            <div class="mobile">
-                <img class="mobile__search-toggle" src="assets/images/filter.png" alt="filter"/>
-                <div class="mobile__burger-menu "></div>
-            </div>
-            <div id="profile" class="profile">
-            </div>
-        </header>
-        <section id="users-block" class="users">
-            <div class="user-search">
-                <img src="assets/images/ant-design_search-outlined.png" alt="search-icon"/>
-                <input id="user-search" placeholder="Поиск"/>
-            </div>
-            <div class="users-types">
-                <span class="users-types__all users-active">Все</span>
-                <span class="users-types__onlain">Онлайн</span>
-            </div>
-            <article id="users-list" class="users-list">
+            <article class="filters" id="filters">
+                <div class="filters__item">
+                    <div>
+                        <img src="assets/images/search.png" alt="search"/>
+                    </div>
+                    <img class="filters__item_icon" src="assets/images/man.png" alt="text-filter">
+                    <input type="text" placeholder="Поиск" id="filter-author"/>
+                </div>
+                <div class="filters__item">
+                    <div>
+                        <img src="assets/images/search.png" alt="search"/>
+                    </div>
+                    <img class="filters__item-img_mobile" src="assets/images/text.png" alt="user-filter"/>
+                    <input type="text" placeholder="Поиск" id="filter-text"/>
+                </div>
+                <div class="filters__item-date">
+                    <div>
+                        <div>C</div>
+                        <input id="filter-from" type="date"/>
+                    </div>
+                    <div class="filters__item-date_mobile">
+                        <div>ПО</div>
+                        <input id="filter-to" type="date"/>
+                    </div>
+                </div>
+                <div class="filters__buttons">
+                    <button id="filter__btn-submit" class="filter__button button-disabled" disabled>Поиск</button>
+                    <button id="filter__btn-cancel" class="filter__button button-disabled" disabled>Отмена</button>
+                </div>
             </article>
-        </section>
-        <section id="messages" class="messages">
-            <div class="messages-header">
-                <div class="messages-header__chat" id="chat-header">
-                    <div class="messages-header__chat-name  orange">DC</div>
-                    <span>DM Courses</span>
-                </div>
-                <article class="filters">
-                    <div class="filters__item">
-                        <div>
-                            <img src="assets/images/search.png" alt="search"/>
-                        </div>
-                        <img class="filters__item_icon" src="assets/images/man.png" alt="text-filter">
-                        <input type="text" placeholder="Поиск" id="filter-author"/>
-                    </div>
-                    <div class="filters__item">
-                        <div>
-                            <img src="assets/images/search.png" alt="search"/>
-                        </div>
-                        <img class="filters__item-img_mobile" src="assets/images/text.png" alt="user-filter"/>
-                        <input type="text" placeholder="Поиск" id="filter-text"/>
-                    </div>
-                    <div class="filters__item-date">
-                        <div>
-                            <div>C</div>
-                            <input id="filter-from" type="date"/>
-                        </div>
-                        <div class="filters__item-date_mobile">
-                            <div>ПО</div>
-                            <input id="filter-to" type="date"/>
-                        </div>
-                    </div>
-                    <div class="filters__buttons">
-                        <button id="filter__btn-submit" class="filter__button button-disabled" disabled>Поиск</button>
-                        <button id="filter__btn-cancel" class="filter__button button-disabled" disabled>Отмена</button>
-                    </div>
-                </article>
-                <button class="chat-messages-button orange chat-button_active"><img id="add-msg-btn"
-                                                                                    src="assets/images/add%20message.png"
-                                                                                    alt="add-message-button"></button>
-            </div>
-            <div id="messages-list" class="messages-list">
+            <button  id="add-msg-btn" class="chat-messages-button orange chat-button_active"><img
+                                                                                src="assets/images/add%20message.png"
+                                                                                alt="add-message-button"></button>
+        </div>
+        <div id="messages-list" class="messages-list">
 
+        </div>
+    </section>
+    <section id="chat-input" class="chat-input ">
+        <div>
+            <input id="message-input" class="message-input_disabled" type="text"
+                   placeholder="Только зарегистрированный пользователь может писать сообщения..." disabled/>
+            <button id="message-btn"
+                    class="chat-messages-button orange chat-button_active chat-messages-button_hide">
+                <img src="assets/images/mdi_send.png" alt="add-message-button">
+            </button>
+        </div>
+    </section>
+    <form class="form">
+        <div class="form-header">
+            <div class="form__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
+        </div>
+        <input class="form-input" name="name" type="text" placeholder="login">
+        <input class="form-input" type="password" placeholder="password">
+        <button id="form-btn" class="form__button">Войти</button>
+    </form>
+    <form class="form">
+        <div class="form-header">
+            <div class="form__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
+        </div>
+        <input class="form-input" name="name" type="text" placeholder="login">
+        <input class="form-input" type="password" placeholder="password">
+        <input class="form-input" type="password" placeholder="password">
+        <button id="sign-in-btn" class="form__button">Регистрация</button>
+    </form>
+    <footer class="footer">
+        <div>
+            <div class="footer__chat-name">Чат</div>
+            <div class="footer__chat-name">Заводной апельсин</div>
+        </div>
+        <div class="footer__data">
+            <h6 class="footer__data-personal">bigklu95@gmail.com</h6>
+            <div class="footer__data-social-webs">
+                <a href="https://www.instagram.com/"><img src="assets/images/telega.png" alt="telegram-logo"/></a>
+                <a href="https://vk.com/feed"><img src="assets/images/vk.png" alt="vk-logo"/></a>
+                <a href="https://telegram.org/"> <img src="assets/images/insta.png" alt="inst-logo"/></a>
             </div>
-        </section>
-        <section id="chat-input" class="chat-input ">
-            <div>
-                <input id="message-input" class="message-input_disabled" type="text"
-                       placeholder="Только зарегистрированный пользователь может писать сообщения..." disabled/>
-                <button id="message-btn"
-                        class="chat-messages-button orange chat-button_active chat-messages-button_hide">
-                    <img src="assets/images/mdi_send.png" alt="add-message-button">
-                </button>
-            </div>
-        </section>
-        <form class="form">
-            <div class="form-header">
-                <div class="form__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
-            </div>
-            <input class="form-input" name="name" type="text" placeholder="login">
-            <input class="form-input" type="password" placeholder="password">
-            <button id="form-btn" class="form__button">Войти</button>
-        </form>
-        <form class="form">
-            <div class="form-header">
-                <div class="form__logo"><img src="assets/images/апельсинка%20без%20фона.png" alt="logo"/></div>
-            </div>
-            <input class="form-input" name="name" type="text" placeholder="login">
-            <input class="form-input" type="password" placeholder="password">
-            <input class="form-input" type="password" placeholder="password">
-            <button id="sign-in-btn" class="form__button">Регистрация</button>
-        </form>
-        <footer class="footer">
-            <div>
-                <div class="footer__chat-name">Чат</div>
-                <div class="footer__chat-name">Заводной апельсин</div>
-            </div>
-            <div class="footer__data">
-                <h6 class="footer__data-personal">bigklu95@gmail.com</h6>
-                <div class="footer__data-social-webs">
-                    <a href="https://www.instagram.com/"><img src="assets/images/telega.png" alt="telegram-logo"/></a>
-                    <a href="https://vk.com/feed"><img src="assets/images/vk.png" alt="vk-logo"/></a>
-                    <a href="https://telegram.org/"> <img src="assets/images/insta.png" alt="inst-logo"/></a>
-                </div>
-                <h6 class="footer__data-personal">Клусович Никита 18 10 2020</h6>
-            </div>
-        </footer>
-    </main>
-</template>
+            <h6 class="footer__data-personal">Клусович Никита 29 11 2020</h6>
+        </div>
+    </footer>
+</main>
 </body>
+<script src="classes/Message.js"></script>
+<script src="classes/ChatState.js"></script>
 <script src="classes/UserLogo.js"></script>
 <script src="classes/ChatHeaderView.js"></script>
-<script src="classes/Message.js"></script>
 <script src="classes/MessageList.js"></script>
 <script src="classes/UserList.js"></script>
 <script src="classes/HeaderView.js"></script>
-<script src="classes/MainTemplateView.js"></script>
 <script src="classes/MessageView.js"></script>
-<script src="classes/ActiveUsers.js"></script>
+<script src="classes/UserListView.js"></script>
 <script src="classes/Controller.js"></script>
 <script src="classes/globalFunctions.js"></script>
+<script src="classes/Listeners.js"></script>
 </html>
