--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,7 @@
     <title>ZA</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <main class="main" id="main">
@@ -128,7 +129,8 @@
 </main>
 </body>
 <script src="classes/Message.js"></script>
-<script src="classes/ChatState.js"></script>
+<script src="classes/ChatApiService.js"></script>
+<script src="classes/Notification.js"></script>
 <script src="classes/UserLogo.js"></script>
 <script src="classes/ChatHeaderView.js"></script>
 <script src="classes/MessageList.js"></script>
