--- a/UI/index.html
+++ b/UI/index.html
@@ -18,8 +18,11 @@
             <h1 class="header__title" id="header-logo">Заводной апельсин</h1>
         </div>
         <div class="mobile">
-            <img class="mobile__search-toggle" src="assets/images/filter.png" alt="filter"/>
-            <div class="mobile__burger-menu "></div>
+            <img class="mobile__search-toggle" id="mobile-search" src="assets/images/filter.png" alt="filter"/>
+            <div id="mobile-menu">
+                <div class="mobile__burger-menu" ></div>
+            </div>
+
         </div>
         <div id="profile" class="profile">
         </div>
@@ -130,6 +133,7 @@
 </body>
 <script src="classes/Message.js"></script>
 <script src="classes/ChatApiService.js"></script>
+<script src="classes/ErrorPageVIew.js"></script>
 <script src="classes/Notification.js"></script>
 <script src="classes/UserLogo.js"></script>
 <script src="classes/ChatHeaderView.js"></script>
